--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      * {
+        background-color: black;
+        color: white;
+      }
+      a:hover {
+        color: rgb(125, 125, 125);
+      }
+      a:active {
+        background-color: white;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <button style="color: blueviolet;">Gooogle</button>
+    <button style="color: green;">Bing</button>
+    <button style="color: yellow;">Ecosia</button>
+    <article>
+      <a
+        href="https://www.youtube.com/channel/UCR1D15p_vdP3HkrH8wgjQRw"
+        target="_blank"
+        >Internet Historian</a
+      >
+    </article>
+    <article>
+      <a
+        href="https://www.youtube.com/channel/UCbWcXB0PoqOsAvAdfzWMf0w"
+        target="_blank"
+        >Fredrik Knudsen - Down The Rabit Hole</a
+      >
+    </article>
+    <article>
+      <a href="www.istheutefreitag.de" target="_blank">Ist heute Freitag?</a>
+    </article>
+  </body>
 </html>
